--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,6 @@
-
-
 [submodule "dev/vnv/support/freertos"]
 	path = dev/vnv/support/freertos
-	url = git@github.com:brandonbraun653/FreeRTOS.git
+	url = https://github.com/brandonbraun653/FreeRTOS.git
 [submodule "tools/CommonTools"]
 	path = tools/CommonTools
-	url = git@github.com:brandonbraun653/CommonTools.git
+	url = https://github.com/brandonbraun653/CommonTools.git
