Updated the SPI driver to operate on a new factory based interface.

--- a/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
+++ b/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
@@ -191,6 +191,7 @@
     <ClCompile Include="..\..\..\Chimera\chimera_crc.cpp" />
     <ClCompile Include="..\..\..\Chimera\chimera_exception.cpp" />
     <ClCompile Include="..\..\..\Chimera\chimera_logging.cpp" />
+    <ClCompile Include="..\..\..\Chimera\chimera_spi.cpp" />
     <ClCompile Include="..\..\..\Chimera\chimera_system.cpp" />
     <ClCompile Include="..\..\..\Chimera\chimera_threading.cpp" />
     <ClCompile Include="..\..\..\Chimera\chimera_watchdog.cpp" />
